test_data/Json/Unexpected/Unserializable/InvalidModelType/Blob/wrong.json.exception
Expected the model type 'Blob', but got soReallyUtterlyInvalid at: modelType